# postgrestui

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cloudflare-worker/: package-lock.json  package.json  schema.sql  worker.ts  wrangler.toml
scripts/: release-local.sh
src/: api.rs  app.rs  main.rs  ui.rs
src/ui/: colors.rs  help_view.rs  string_list.rs  talbe_view.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
