[package]
name = "postgrestui"
version = "0.1.2"
edition = "2021"
authors = ["Dzulfikar Ats Tsauri <dzulfikar08@github.com>"]
license = "GPL-3.0"
description = "A blazing fast TUI PostgreSQL browser — browse, query, and manage databases from your terminal"
repository = "https://github.com/dzulfikar08/postgrestui"
readme = "README.md"
keywords = ["cli", "tui", "postgres", "postgresql", "database"]
categories = ["command-line-utilities"]

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
axum = "0.7"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
futures-util = "0.3"
mime_guess = "2"
ratatui = { version = "0.29.0", features = ["serde"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
